# vendor_mcp

./: .gitignore  API_REFERENCE.md  EXAMPLES.md  EXECUTIVE_SUMMARY.md  FAQ.md  README.md  TOOL_TESTING.md  product_review.md  pyproject.toml  run-mcp.sh
tests/: test_scrapers.py
vendor_reliability_mcp/: server.py
vendor_reliability_mcp/scrapers/: __init__.py  bbb.py  sam_gov.py  sec_edgar.py  usaspending.py
